--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Best Game Ever!</title>
+    <meta charset="utf-8" />
+    <title>Kitty Catch!</title>
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <h1 id="title">Kitty Rescue!</h1>
+    <audio controls id="bgMusic">
+      <source src="mp3/airtone_-_adrift.mp3" />
+    </audio>
+  </header>
   <body>
+    <div class="story"></div>
     <script src="game.js"></script>
   </body>
 </html>
